# forgevm

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.sh  docker-compose.yml  forgevm.yaml.example  go.mod  go.sum
.github/workflows/: publish-npm.yml  publish-pypi.yml  release.yml
cmd/forgevm/: cmd_build_image.go  cmd_exec.go  cmd_kill.go  cmd_list.go  cmd_serve.go  cmd_spawn.go  cmd_tui.go  cmd_version.go  main.go
cmd/forgevm-agent/: main.go
docs/: docs.go  snapshot-restore.md  swagger.json  swagger.yaml
examples/js/: basic.ts  lmstudio_agent.ts
examples/python/: basic.py  ollama_agent.py  streaming.py
images/python-sandbox/: Dockerfile
internal/agentproto/: protocol.go
internal/api/: server.go
internal/config/: config.go
internal/environments/: manager.go  manager_test.go
internal/orchestrator/: manager.go  manager_test.go  templates.go  types.go  vm_pool.go
internal/providers/: custom.go  docker.go  e2b.go  firecracker.go  mock.go  mock_test.go  provider.go  rootfs_builder.go
internal/rootfs/: builder.go
internal/store/: migrations.go  sqlite.go  sqlite_test.go  store.go
scripts/: benchmark.sh  build-rootfs.sh  install.sh  setup-kernel.sh  setup.sh  test_multiuser_pool.py
sdk/js/: README.md  (+3 more)
sdk/python/: README.md  pyproject.toml
sdk/python/forgevm/: __init__.py  async_client.py  async_sandbox.py  client.py  exceptions.py  models.py  providers.py  sandbox.py  templates.py
sdk/python/tests/: test_client.py  test_llm.py  test_pdf_gen.py
web/: index.html  package-lock.json  package.json
(+39 files in other folders)
